# HermesMemoryCompiler

./: .gitignore  AGENTS.md  README.md  config.yaml  pyproject.toml
hermes_memory_compiler/: __init__.py  _common.py  hooks.py  lock.py  marker.py
hermes_memory_compiler/scripts/: compile.py  config.py  flush.py  lint.py  query.py
hermes_plugin/: __init__.py  hooks.py  lock.py  marker.py  plugin.yaml
scripts/: compile.py  config.py  flush.py  install-cron.sh  lint.py  query.py  utils.py
tests/: conftest.py  test_hooks.py  test_remediation.py
